Labs/exam/Task_Terraform/modules/ec2/main.tf
resource "aws_security_group" "michael_security_group" {
  name   = "michael_security_group"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_instance" "michael-instance" {
  count = length(var.subnet_id)
  ami = var.ami_id
  instance_type  = var.instance_type
  subnet_id = var.subnet_id[count.index]
  vpc_security_group_ids = [aws_security_group.michael_security_group.id]
  associate_public_ip_address = var.assign_public_ip

  tags = {
    Name = "michael-instance-${count.index}"
  }
}
